@@ -20,10 +20,8 @@
 #include "DecorationsPriv.h"
 
 #include <core/atoms.h>
-#include <NuxGraphics/CairoGraphics.h>
 #include <UnityCore/DBusIndicators.h>
 #include <X11/Xatom.h>
-#include <X11/extensions/shape.h>
 
 #include "WindowManager.h"
 
@@ -79,31 +77,6 @@ cu::PixmapTexture::Ptr Manager::Impl::BuildShadowTexture(unsigned radius, nux::C
   cu::CairoContext shadow_ctx(tex_size, tex_size);
   cairo_set_source_surface(shadow_ctx, dummy.GetSurface(), 0, 0);
   cairo_paint(shadow_ctx);
-  return shadow_ctx;
-}
-
-cu::PixmapTexture::Ptr Manager::Impl::BuildShapedShadowTexture(unsigned int radius, nux::Color const& color, DecorationsShape const& shape) {
-  //Ideally it would be shape.getWidth + radius * 2 but Cairographics::BlurSurface isn't bounded by the radius
-  //and we need to compensate by using a larger texture. Make sure to modify Window::Impl::ComputeShapedShadowQuad in
-  //DecoratedWindow.cpp if you change the factor.
-  int blur_margin_factor = 2;
-  int img_width = shape.getWidth() + radius * 2 * blur_margin_factor;
-  int img_height = shape.getHeight() + radius * 2 * blur_margin_factor;
-  nux::CairoGraphics img(CAIRO_FORMAT_ARGB32, img_width, img_height);
-  auto* img_ctx = img.GetInternalContext();
-
-  for (int i=0; i<shape.getRectangleCount(); i++) {
-    XRectangle rect = shape.getRectangle(i);
-    cairo_rectangle(img_ctx, rect.x + radius * blur_margin_factor - shape.getXoffs(), rect.y + radius * blur_margin_factor - shape.getYoffs(), rect.width, rect.height);
-    cairo_set_source_rgba(img_ctx, color.red, color.green, color.blue, color.alpha);
-    cairo_fill(img_ctx);
-  }
-  img.BlurSurface(radius);
-
-  cu::CairoContext shadow_ctx(img_width, img_height);
-  cairo_set_source_surface(shadow_ctx, img.GetSurface(), 0, 0);
-  cairo_paint(shadow_ctx);
-
   return shadow_ctx;
 }
 
